--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".ui.MainActivity"
+                android:name=".ui.dodeca.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
             <!--android:configChanges="orientation|screenSize"-->
@@ -47,15 +47,15 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.DodecaEditActivity">
+        <activity android:name=".ui.dodecaedit.DodecaEditActivity">
         </activity>
-        <activity android:name=".ui.SettingsActivity">
+        <activity android:name=".ui.settings.SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.DduChooserActivity"/>
-        <activity android:name=".ui.HelpActivity"/>
+        <activity android:name=".ui.dduchooser.DduChooserActivity"/>
+        <activity android:name=".ui.help.HelpActivity"/>
     </application>
 
 </manifest>
