--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     ext {
         kotlin_version = '1.3.31'
+        lifecycle_version = '2.2.0-alpha01'
+        room_version = '2.1.0-beta01'
+        paging_version = '2.1.0'
         anko_version = '0.10.7'
         permission_dispatcher_version = '4.1.0'
-        room_version = '2.1.0-beta01'
-        lifecycle_version = '2.2.0-alpha01'
         kotlin_coroutines_version = '1.2.1'
     }
     repositories {
