--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.dodecaview.DodecaViewActivity">
-        </activity>
         <activity
                 android:name=".ui.MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.NoActionBar"
+        >
 
             <!-- android:configChanges="orientation|screenSize" -->
             <intent-filter>
@@ -49,6 +48,11 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".ui.dodecaview.DodecaViewActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+        >
         </activity>
         <activity android:name=".ui.dodecaedit.DodecaEditActivity">
         </activity>
