--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
     <permission-group android:name="android.permission-group.STORAGE"/>
 
     <application
+            android:name="androidx.multidex.MultiDexApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+    >
         <activity
                 android:name=".ui.MainActivity"
                 android:label="@string/app_name"
