--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         kotlin_version = '1.3.40'
-        lifecycle_version = '2.2.0-alpha01'
-        room_version = '2.1.0'
+        lifecycle_version = '2.2.0'
+        room_version = '2.2.3'
         anko_version = '0.10.7'
         permission_dispatcher_version = '4.1.0'
         kotlin_coroutines_version = '1.2.1'
@@ -14,7 +14,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
