--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
             storePassword '<REDACTED>'
         }
     }
-    compileSdkVersion 33
+    compileSdk 34
     defaultConfig {
         applicationId "com.pierbezuhoff.dodeca"
         minSdkVersion 19
-        targetSdkVersion 33
+        targetSdk 33
         multiDexEnabled true
         versionCode 47
         versionName "2.4" // <-> (values, values-ru)/strings.xml/version_name
@@ -51,17 +51,18 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    namespace 'com.pierbezuhoff.dodeca'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha11'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
