--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.devtools.ksp'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -11,7 +13,7 @@ android {
             storePassword '<REDACTED>'
         }
     }
-    compileSdk 34
+    compileSdk 33
     defaultConfig {
         applicationId "com.pierbezuhoff.dodeca"
         minSdkVersion 19
@@ -19,9 +21,12 @@ android {
         multiDexEnabled true
         versionCode 47
         versionName "2.4" // <-> (values, values-ru)/strings.xml/version_name
-        kapt {
-            arguments {
-                arg("room.schemaLocation", "$projectDir/schemas".toString())
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true"
+                ]
             }
         }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -58,16 +63,16 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha11'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
     implementation "org.jetbrains.anko:anko:$anko_version"
@@ -80,9 +85,5 @@ dependencies {
     implementation 'com.rarepebble:colorpicker:2.4.2'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "org.jetbrains.kotlinx:multik-core:$multik_version"
-    implementation "org.jetbrains.kotlinx:multik-default:$multik_version"
-    // no tests for now vvv
-//    testImplementation 'junit:junit:4.13-beta-3'
-//    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
+    implementation "org.jetbrains.kotlinx:multik-kotlin:$multik_version"
 }
