--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    flavorDimensions "version"
+    flavorDimensions = ["version"]
     productFlavors {
         standard {
         }
