--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,8 @@ local.properties
 .idea/libraries
 .idea/modules.xml
 .idea/workspace.xml
-.idea/gradle.xml
-.idea/deploymentTargetDropDown.xml
-.idea/migrations.xml
+**/.idea/workspace.xml
+**/.idea/tasks.xml
 .DS_Store
 build
 captures
